--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,6 +1,6 @@
 .buttonGreen {
     background-color: var(--background-color-button);
-    color: var(--background-color-main);
+    color: var(--text-color-dark);
     padding: 0.2rem 0.5rem;
 }
 
